--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -496,109 +496,88 @@ qc_csaw(
 # - FDR masking (set non-sig to 0) is applied ONLY for vInput in genome-wide window mode
 # - Region mode masking is OFF by default; enable via mask_region and provide FDR/P cutoffs.
 csaw_analysis <- function(
-  metadata_df,                       # metadata
-  design_mat,                        # design matrix
-  mode = c("window","region"),       # match other functions
-  out_obj = NULL,                    # REQUIRED: list returned by csaw_count_and_fit()
-  reference_strain = "WT",           # reference strain to normalize to when not vInput
-  fdr_cutoff = 0.05,                 # FDR threshold (used in window mode; usable in region mode if mask_region=TRUE)
-  pvalue_cutoff = NULL,              # OPTIONAL P-value threshold (usable in region mode if mask_region=TRUE)
-  mask_region = FALSE,               # If TRUE, in region mode zero heatmap logFC where (FDR>cutoff OR P>cutoff), respecting NULLs
-  write_csv_results = FALSE,         # write csv for results df
-  write_csv_heatmap = FALSE,         # write csv for heatmap df
-  write_igv = FALSE,                 # write igv tracks
-  out_dir = "csaw_results",          # output directory
-  merge_tol = 300                    # only affects genomewide window mode
+  metadata_df,
+  design_mat,
+  mode = c("window","region"),
+  out_obj = NULL,
+  reference_strain = "WT",
+  fdr_cutoff = 0.05,       # used in window mode; also usable in region mode when mask_region=TRUE
+  pvalue_cutoff = NULL,    # optional; same rules as FDR when provided
+  mask_region = FALSE,     # region mode only: zero heatmap entries failing (FDR or P) thresholds
+  write_csv_results = FALSE,
+  write_csv_heatmap = FALSE,
+  write_igv = FALSE,
+  out_dir = "csaw_results",
+  merge_tol = 300
 ) {
-  require(edgeR)
-  require(limma)
-  require(csaw)
-  require(GenomicRanges)
-  require(S4Vectors)
+  require(edgeR); require(limma); require(csaw)
+  require(GenomicRanges); require(S4Vectors)
 
   mode <- match.arg(mode)
   if (is.null(out_obj)) stop("out_obj is required (use the list returned by csaw_count_and_fit).")
-
-  # Output dir
   if (!dir.exists(out_dir)) dir.create(out_dir, recursive = TRUE)
 
-  # Helper: put WT first in column order if present
   order_cols_wt_first <- function(nms, wt = "WT") {
     wt_hit <- grep(paste0("^logFC_", wt, "$"), nms, value = TRUE)
-    rest   <- setdiff(nms, wt_hit)
-    c(wt_hit, rest)
+    c(wt_hit, setdiff(nms, wt_hit))
   }
 
-  # Helper: build final result/heatmap tables for a given norm type
+  # helper: significance mask builder given a results df column stem (FDR_, PValue_, logFC_)
+  sig_mask <- function(df, stem, need_positive = FALSE) {
+    fcol <- paste0("FDR_",    stem)
+    pcol <- paste0("PValue_", stem)
+    lcol <- paste0("logFC_",  stem)
+    ok <- rep(TRUE, nrow(df))
+    if (!is.null(fdr_cutoff)    && fcol %in% names(df)) ok <- ok & (df[[fcol]] <= fdr_cutoff)
+    if (!is.null(pvalue_cutoff) && pcol %in% names(df)) ok <- ok & (df[[pcol]] <= pvalue_cutoff)
+    if (need_positive && lcol %in% names(df)) ok <- ok & (df[[lcol]] > 0)
+    ok
+  }
+
   run_norm <- function(mod, fit, counts, region_tag, norm_type, gr_for_region = NULL) {
-    # collect per-strain GRanges with stats
     res_list <- list()
-
-    # strains we’ll consider: all strains mentioned in metadata
     strains <- unique(metadata_df$Strain)
-
-    # if normalizing to a reference strain (e.g. WT), don’t compute that strain vs itself
-    if (norm_type != "input") {
-      strains <- setdiff(strains, reference_strain)
-    }
+    if (norm_type != "input") strains <- setdiff(strains, reference_strain)
 
     for (st in strains) {
       chip_col <- paste0(st, ".", mod)
-
       if (norm_type == "input") {
-        # (ChIP vs Input) within the same strain:  log2(ChIP_st / Input_st)
         st_input_col <- paste0(st, ".input")
         if (!(chip_col %in% colnames(design_mat)) || !(st_input_col %in% colnames(design_mat))) {
-          message("    Skipping ", st, " (missing ", chip_col, " or ", st_input_col, ")")
-          next
+          message("    Skipping ", st, " (missing ", chip_col, " or ", st_input_col, ")"); next
         }
         constr <- sprintf("`%s` - `%s`", chip_col, st_input_col)
-
       } else {
-        # (ChIP/Input)_strain  -  (ChIP/Input)_reference
-        # i.e., (ChIP_st - Input_st) - (ChIP_ref - Input_ref) in log2 space
         st_input_col  <- paste0(st,               ".input")
         ref_chip_col  <- paste0(reference_strain, ".", mod)
         ref_input_col <- paste0(reference_strain, ".input")
-
-        needed <- c(chip_col, st_input_col, ref_chip_col, ref_input_col)
-        if (!all(needed %in% colnames(design_mat))) {
-          missing <- paste(setdiff(needed, colnames(design_mat)), collapse = ", ")
-          message("    Skipping ", st, " (missing: ", missing, ")")
-          next
+        need <- c(chip_col, st_input_col, ref_chip_col, ref_input_col)
+        if (!all(need %in% colnames(design_mat))) {
+          message("    Skipping ", st, " (missing: ", paste(setdiff(need, colnames(design_mat)), collapse=", "), ")"); next
         }
-
-        constr <- sprintf("`%s` - `%s` - (`%s` - `%s`)",
-                          chip_col, st_input_col, ref_chip_col, ref_input_col)
+        constr <- sprintf("`%s` - `%s` - (`%s` - `%s`)", chip_col, st_input_col, ref_chip_col, ref_input_col)
       }
 
       contrast <- limma::makeContrasts(contrasts = constr, levels = design_mat)
       res <- edgeR::glmQLFTest(fit, contrast = contrast)
 
-      # Build GRanges with stats:
-      # - WINDOW mode: merge windows (peak-ish) and attach combined stats
-      # - REGION mode: never merge; attach per-region stats directly
       if (mode == "window") {
         merged <- mergeResults(counts, res$table, tol = merge_tol, merge.args = list(max.width = merge_tol))
         gr <- merged$regions
         mcols(gr) <- S4Vectors::DataFrame(merged$combined)
       } else {
-        # keep user-specified regions exactly; use supplied gr if available to preserve original order
         gr <- if (!is.null(gr_for_region)) gr_for_region else rowRanges(counts)
-        # attach stats parallel to rows
         m <- S4Vectors::mcols(gr)
         m$logFC  <- res$table$logFC
         m$PValue <- res$table$PValue
         m$FDR    <- if ("FDR" %in% colnames(res$table)) res$table$FDR else p.adjust(res$table$PValue, method = "BH")
         S4Vectors::mcols(gr) <- m
       }
-
       res_list[[st]] <- gr
     }
 
-    if (length(res_list) == 0) return(NULL)
+    if (!length(res_list)) return(NULL)
 
-    # Base coordinates (use the first GRanges in the list)
     base <- res_list[[1]]
     final_df <- data.frame(
       seqnames = as.character(GenomicRanges::seqnames(base)),
@@ -609,62 +588,86 @@ csaw_analysis <- function(
       stringsAsFactors = FALSE
     )
 
-    # Fill columns per strain, auto-detecting the right logFC column
     for (st in names(res_list)) {
       gr <- res_list[[st]]
       mnames <- colnames(S4Vectors::mcols(gr))
-      lfc_col <- if ("rep.logFC" %in% mnames) "rep.logFC" else
-                 if ("logFC"     %in% mnames) "logFC"     else
-                 stop("Neither rep.logFC nor logFC found for ", st, " (", mod, ")")
+      lfc_col <- if ("rep.logFC" %in% mnames) "rep.logFC" else if ("logFC" %in% mnames) "logFC" else
+        stop("Neither rep.logFC nor logFC found for ", st, " (", mod, ")")
 
-      final_df[[paste0("logFC_", st)]] <- S4Vectors::mcols(gr)[[lfc_col]]
+      final_df[[paste0("logFC_", st)]]  <- S4Vectors::mcols(gr)[[lfc_col]]
       final_df[[paste0("PValue_", st)]] <- S4Vectors::mcols(gr)[["PValue"]]
-      if ("FDR" %in% mnames) {
-        final_df[[paste0("FDR_", st)]] <- S4Vectors::mcols(gr)[["FDR"]]
-      } else {
-        final_df[[paste0("FDR_", st)]] <- p.adjust(S4Vectors::mcols(gr)[["PValue"]], method = "BH")
-      }
+      final_df[[paste0("FDR_", st)]]    <- if ("FDR" %in% mnames) S4Vectors::mcols(gr)[["FDR"]] else
+        p.adjust(S4Vectors::mcols(gr)[["PValue"]], method = "BH")
     }
 
-    # Build heatmap matrix (logFC only)
-    logfc_cols <- grep("^logFC_", colnames(final_df), value = TRUE)
-    # Put WT first if present
+    # heatmap matrix
+    logfc_cols <- grep("^logFC_", names(final_df), value = TRUE)
     logfc_cols <- order_cols_wt_first(logfc_cols, wt = "WT")
     heatmap_df <- final_df[, logfc_cols, drop = FALSE]
     rownames(heatmap_df) <- paste(final_df$seqnames, final_df$start, final_df$end, sep = ".")
 
-    # Apply masking/significance logic
+    # ---------- masking / filtering ----------
+    wt_possig_mask <- NULL
+
     if (mode == "window") {
-      # WINDOW: drop rows where ALL strains are non-significant by FDR (unchanged behavior)
-      fdr_cols <- sub("^logFC_", "FDR_", logfc_cols)
-      keep <- rowSums(final_df[, fdr_cols, drop = FALSE] <= fdr_cutoff, na.rm = TRUE) > 0
-      heatmap_df <- heatmap_df[keep, , drop = FALSE]
+      if (norm_type == "input") {
+        # keep rows where ANY strain is significant (FDR/P) AND has positive logFC vs input
+        keep_any <- rep(FALSE, nrow(final_df))
+        for (st in sub("^logFC_", "", logfc_cols)) {
+          keep_any <- keep_any | sig_mask(final_df, stem = st, need_positive = TRUE)
+        }
+        heatmap_df <- heatmap_df[keep_any, , drop = FALSE]
+
+        # save WT positive+significant mask (on the *unfiltered* full table alignment)
+        if ("WT" %in% sub("^logFC_", "", logfc_cols)) {
+          wt_possig_mask <- sig_mask(final_df, stem = "WT", need_positive = TRUE)
+          names(wt_possig_mask) <- rownames(final_df)  # key by coord string
+        }
+
+        # also return which rows we kept so vWT can align if needed
+        kept_rows <- rownames(heatmap_df)
+
+      } else { # norm_type == "ref" (e.g., vWT)
+        # keep rows if (A) any mutant is significant by FDR/P (no sign constraint)
+        keep_any_mut <- rep(FALSE, nrow(final_df))
+        for (st in sub("^logFC_", "", logfc_cols)) {
+          keep_any_mut <- keep_any_mut | sig_mask(final_df, stem = st, need_positive = FALSE)
+        }
+
+        # OR (B) WT vInput was pos+sig at that locus (from the vInput run)
+        # We'll read the mask later from the parent env if available.
+        if (!exists(".wt_possig_lookup", inherits = FALSE)) {
+          .wt_possig_lookup <- NULL
+        }
+        keep_wt_possig <- rep(FALSE, nrow(final_df))
+        if (!is.null(.wt_possig_lookup)) {
+          rn <- paste(final_df$seqnames, final_df$start, final_df$end, sep = ".")
+          keep_wt_possig <- !is.na(.wt_possig_lookup[rn]) & .wt_possig_lookup[rn]
+        }
+
+        keep <- keep_any_mut | keep_wt_possig
+        heatmap_df <- heatmap_df[keep, , drop = FALSE]
+      }
 
     } else if (isTRUE(mask_region)) {
-      # REGION: optional masking. Zero per-strain logFC if it fails EITHER provided cutoff.
-      for (st in names(res_list)) {
-        lcol <- paste0("logFC_",   st)
-        fcol <- paste0("FDR_",     st)
-        pcol <- paste0("PValue_",  st)
-        if (!(lcol %in% colnames(heatmap_df))) next
-
+      # region mode: optional per-cell zeroing based on thresholds
+      for (st in sub("^logFC_", "", logfc_cols)) {
+        lcol <- paste0("logFC_", st)
+        fcol <- paste0("FDR_", st)
+        pcol <- paste0("PValue_", st)
         mask <- rep(FALSE, nrow(final_df))
-        if (!is.null(fdr_cutoff)    && fcol %in% colnames(final_df)) mask <- mask | (final_df[[fcol]] > fdr_cutoff)
-        if (!is.null(pvalue_cutoff) && pcol %in% colnames(final_df)) mask <- mask | (final_df[[pcol]] > pvalue_cutoff)
-
+        if (!is.null(fdr_cutoff)    && fcol %in% names(final_df)) mask <- mask | (final_df[[fcol]] > fdr_cutoff)
+        if (!is.null(pvalue_cutoff) && pcol %in% names(final_df)) mask <- mask | (final_df[[pcol]] > pvalue_cutoff)
         if (any(mask)) heatmap_df[[lcol]][mask] <- 0
       }
-    } else {
-      # REGION: no masking — keep raw logFCs.
     }
+    # ----------------------------------------
 
-    list(results = final_df, heatmap = heatmap_df)
+    list(results = final_df, heatmap = heatmap_df, wt_possig_mask = wt_possig_mask)
   }
 
-  # Determine modifications to analyze (exclude "input")
   all_mods <- setdiff(unique(metadata_df$Antibody), "input")
 
-  # Iterate region sets (region mode) or genomewide/filtered (window mode)
   if (mode == "region") {
     if (is.null(out_obj$regions) || !length(out_obj$regions)) stop("No region sets found in out_obj$regions.")
     for (nm in names(out_obj$regions)) {
@@ -680,55 +683,46 @@ csaw_analysis <- function(
         # vInput
         res_vin <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "input", gr_for_region = gr_in)
         if (!is.null(res_vin)) {
-          res_df <- res_vin$results
-          hm_df  <- res_vin$heatmap
-
-          # Name & assign
+          res_df <- res_vin$results; hm_df <- res_vin$heatmap
           res_name <- paste0(mod, "_Results_", nm, "_vInput")
           hm_name  <- paste0(mod, "_Heatmap_", nm, "_vInput")
           assign(res_name, res_df, envir = .GlobalEnv)
           assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
-          # IO
           if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
           if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
           if (write_igv) {
-            # IGV from RESULTS df: seqnames/start/end/name + all logFC_* columns
-            lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+            lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
             igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-            igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv"))
-            write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+            write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv")),
+                        sep = "\t", quote = FALSE, row.names = FALSE)
           }
           message("  Modification: ", mod, "\n    -> Saved: ", res_name, " (and ", hm_name, ")")
         }
 
-        # vReference (e.g., vWT)
+        # vReference
         res_vref <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "ref", gr_for_region = gr_in)
         if (!is.null(res_vref)) {
-          res_df <- res_vref$results
-          hm_df  <- res_vref$heatmap
-
+          res_df <- res_vref$results; hm_df <- res_vref$heatmap
           norm_tag <- paste0("v", reference_strain)
           res_name <- paste0(mod, "_Results_", nm, "_", norm_tag)
           hm_name  <- paste0(mod, "_Heatmap_", nm, "_", norm_tag)
           assign(res_name, res_df, envir = .GlobalEnv)
           assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
           if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
           if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
           if (write_igv) {
-            lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+            lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
             igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-            igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv"))
-            write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+            write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv")),
+                        sep = "\t", quote = FALSE, row.names = FALSE)
           }
           message("    -> Saved: ", res_name, " (and ", hm_name, ")")
         }
       }
     }
+
   } else {
     # WINDOW MODE
-    # genomewide first (if present)
     if (!is.null(out_obj$genomewide)) {
       gw <- out_obj$genomewide
       fit    <- gw$fit
@@ -738,54 +732,57 @@ csaw_analysis <- function(
       for (mod in all_mods) {
         if (identical(mod, "input")) next
 
-        # vInput
+        # vInput first, so we can collect WT pos+sig mask for vWT pass
         res_vin <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "input", gr_for_region = NULL)
-        if (!is.null(res_vin)) {
-          res_df <- res_vin$results
-          hm_df  <- res_vin$heatmap
+        wt_lookup <- NULL
+        if (!is.null(res_vin$wt_possig_mask)) {
+          wt_lookup <- res_vin$wt_possig_mask
+        }
 
+        if (!is.null(res_vin)) {
+          res_df <- res_vin$results; hm_df <- res_vin$heatmap
           res_name <- paste0(mod, "_Results_", nm, "_vInput")
           hm_name  <- paste0(mod, "_Heatmap_", nm, "_vInput")
           assign(res_name, res_df, envir = .GlobalEnv)
           assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
           if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
           if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
           if (write_igv) {
-            lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+            lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
             igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-            igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv"))
-            write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+            write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv")),
+                        sep = "\t", quote = FALSE, row.names = FALSE)
           }
           message("  Modification: ", mod, "\n    -> Saved: ", res_name, " (and ", hm_name, ")")
         }
 
-        # vReference
-        res_vref <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "ref", gr_for_region = NULL)
-        if (!is.null(res_vref)) {
-          res_df <- res_vref$results
-          hm_df  <- res_vref$heatmap
+        # Make WT vInput mask visible to the next call (vWT)
+        .wt_possig_lookup <<- wt_lookup
 
+        # vReference (e.g., vWT)
+        res_vref <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "ref", gr_for_region = NULL)
+        .wt_possig_lookup <<- NULL  # clear after use
+
+        if (!is.null(res_vref)) {
+          res_df <- res_vref$results; hm_df <- res_vref$heatmap
           norm_tag <- paste0("v", reference_strain)
           res_name <- paste0(mod, "_Results_", nm, "_", norm_tag)
           hm_name  <- paste0(mod, "_Heatmap_", nm, "_", norm_tag)
           assign(res_name, res_df, envir = .GlobalEnv)
           assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
           if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
           if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
           if (write_igv) {
-            lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+            lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
             igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-            igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv"))
-            write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+            write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv")),
+                        sep = "\t", quote = FALSE, row.names = FALSE)
           }
           message("    -> Saved: ", res_name, " (and ", hm_name, ")")
         }
       }
     }
 
-    # If you also filtered genomewide windows to region sets in out_obj$regions, handle them too
     if (!is.null(out_obj$regions) && length(out_obj$regions)) {
       for (nm in names(out_obj$regions)) {
         rg <- out_obj$regions[[nm]]
@@ -795,47 +792,44 @@ csaw_analysis <- function(
         for (mod in all_mods) {
           if (identical(mod, "input")) next
 
-          # vInput
           res_vin <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "input", gr_for_region = NULL)
-          if (!is.null(res_vin)) {
-            res_df <- res_vin$results
-            hm_df  <- res_vin$heatmap
+          wt_lookup <- if (!is.null(res_vin$wt_possig_mask)) res_vin$wt_possig_mask else NULL
 
+          if (!is.null(res_vin)) {
+            res_df <- res_vin$results; hm_df <- res_vin$heatmap
             res_name <- paste0(mod, "_Results_", nm, "_vInput")
             hm_name  <- paste0(mod, "_Heatmap_", nm, "_vInput")
             assign(res_name, res_df, envir = .GlobalEnv)
             assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
             if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
             if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
             if (write_igv) {
-              lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+              lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
               igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-              igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv"))
-              write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+              write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_vInput.igv")),
+                          sep = "\t", quote = FALSE, row.names = FALSE)
             }
             message("  Modification: ", mod, "\n    -> Saved: ", res_name, " (and ", hm_name, ")")
           }
 
-          # vReference
+          .wt_possig_lookup <<- wt_lookup
           res_vref <- run_norm(mod, fit, counts, region_tag = nm, norm_type = "ref", gr_for_region = NULL)
-          if (!is.null(res_vref)) {
-            res_df <- res_vref$results
-            hm_df  <- res_vref$heatmap
+          .wt_possig_lookup <<- NULL
 
+          if (!is.null(res_vref)) {
+            res_df <- res_vref$results; hm_df <- res_vref$heatmap
             norm_tag <- paste0("v", reference_strain)
             res_name <- paste0(mod, "_Results_", nm, "_", norm_tag)
             hm_name  <- paste0(mod, "_Heatmap_", nm, "_", norm_tag)
             assign(res_name, res_df, envir = .GlobalEnv)
             assign(hm_name,  hm_df,  envir = .GlobalEnv)
-
             if (write_csv_results) write.csv(res_df, file.path(out_dir, paste0(res_name, ".csv")), row.names = FALSE)
             if (write_csv_heatmap) write.csv(hm_df,  file.path(out_dir, paste0(hm_name,  ".csv")), row.names = TRUE)
             if (write_igv) {
-              lfc_cols <- grep("^logFC_", colnames(res_df), value = TRUE)
+              lfc_cols <- grep("^logFC_", names(res_df), value = TRUE)
               igv_out  <- res_df[, c("seqnames","start","end","name", lfc_cols), drop = FALSE]
-              igv_file <- file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv"))
-              write.table(igv_out, igv_file, sep = "\t", quote = FALSE, row.names = FALSE)
+              write.table(igv_out, file.path(out_dir, paste0(mod, "_logFC_", nm, "_", norm_tag, ".igv")),
+                          sep = "\t", quote = FALSE, row.names = FALSE)
             }
             message("    -> Saved: ", res_name, " (and ", hm_name, ")")
           }
@@ -843,8 +837,9 @@ csaw_analysis <- function(
       }
     }
   }
-}
 
+  invisible(NULL)
+}
 
 ```
 
